force-app/main/default/objects/Deal_Summary_Event__e/Deal_Summary_Event__e.object-meta.xml
<CustomObject>
    <description>PE to update deal summary records</description>
    <label>Deal Summary Event</label>
    <pluralLabel>Deal Summary Events</pluralLabel>
</CustomObject>