force-app/main/default/objects/Deal_Summary_Event__e/fields/Deal_Summary_Id__c.field-meta.xml
<CustomField>
    <fullName>Deal_Summary_Id__c</fullName>
    <label>Deal Summary  Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>