force-app/main/default/objects/Deal_Summary_Event__e/fields/Last_Stage_Changed__c.field-meta.xml
<CustomField>
    <fullName>Last_Stage_Changed__c</fullName>
    <label>Last Stage Changed</label>
    <type>Date</type>
</CustomField>