force-app/main/default/objects/Deal_Summary_Event__e/fields/Old_Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Old_Stage_Name__c</fullName>
    <label>Old Stage Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>