force-app/main/default/objects/Deal_Summary_Event__e/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <length>80</length>
    <type>Text</type>
</CustomField>