force-app/main/default/objects/Deal_Summary_Event__e/fields/Opportunity_Plan__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Plan__c</fullName>
    <label>Opportunity Plan</label>
    <length>80</length>
    <type>Text</type>
</CustomField>