force-app/main/default/objects/Deal_Summary_Event__e/fields/Stage_Discover__c.field-meta.xml
<CustomField>
    <fullName>Stage_Discover__c</fullName>
    <label>Stage Discover</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>