force-app/main/default/objects/Deal_Summary_Event__e/fields/Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Stage_Name__c</fullName>
    <label>Stage Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>