force-app/main/default/objects/Deal_Summary_Event__e/fields/Stage_Propose__c.field-meta.xml
<CustomField>
    <fullName>Stage_Propose__c</fullName>
    <label>Stage Propose</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>