force-app/main/default/objects/Deal_Summary_Event__e/fields/Stage_Qualify__c.field-meta.xml
<CustomField>
    <fullName>Stage_Qualify__c</fullName>
    <label>Stage Qualify</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>